--- a/public/templates/employeeDetail.html
+++ b/public/templates/employeeDetail.html
@@ -70,7 +70,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-md-6 col-md-offset-6">
+                    <div class="col-md-2 col-md-offset-5 operationBtn">
                         <button  class="btn btn-success btn-md" ng-click="editProfile()">Edit</button>
                         <button  class="btn btn-danger btn-md" ng-click="deleteProfile()">Delete</button>
                     </div>
