--- a/public/templates/dirReports.html
+++ b/public/templates/dirReports.html
@@ -1,32 +1,33 @@
-<div class="container">
-
-    <h3>{{message}}</h3>
-    <hr>
-
-    <div class="container directory-info-row">
-        <div class="row">
-            <div class="search-box">
-                <h3>Direct Reports to {{manager.name}}:</h3>
-                <span class="glyphicon glyphicon-search"></span>
-                <input type="text" ng-model="searchText" placeholder="Search employee here...">
-            </div>
-            <div class="col-md-6 col-sm-6" ng-repeat="employee in employees | filter : searchText">
-                <div class="panel">
-            	  <div class="panel-body">
-            	      <div class="media">
-            	          <a class="pull-left" href="#/{{employee._id}}">
-            	              <img class="thumb media-object" ng-src="/images/uploads/{{employee.name.replace(' ', '')}}.png" alt="">
-            	          </a>
-            	          <div class="media-body">
-            	              <h4><a href="#/{{employee._id}}">{{employee.name}}</a> <span class="text-muted small"> - {{employee.title}}</span></h4>
-                              <a href="#/{{employee._id}}/reports" >Diret Reports: {{ employee.dirReports.length}}</a>
-                              <br>
-                              <button class="btn btn-primary" ng-click="viewDetail(employee)">More Details</button>
-            	          </div>
-            	      </div>
-            	  </div>
-            	</div>
-            </div>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a href="#/" class="navbar-brand">Employee Directory</a>
         </div>
+        <ul class="nav navbar-nav">
+            <li><a href="#/">View Employee List</a></li>
+            <li><a href="#/new_employee">Create New Employee</a></li>
+        </ul>
     </div>
+</nav>
+
+<div class="form-group has-feedback has-feedback-left search-bar">
+    <input ng-model="searchText" type="search" class="form-control" placeholder="search">
+    <i class="form-control-feedback glyphicon glyphicon-search "></i>
+</div>
+
+<div class="scroller">
+    <ul class="list-group list">
+        <li ng-repeat="employee in employees | filter : searchText" class="list-group-item">
+            <a href="#/{{employee._id}}">
+                <img src="images/user.png">
+            </a>
+
+            <p><a href="#/{{employee._id}}">{{employee.name}}</a></p>
+            <p>{{employee.title}}</p>
+            <p class="count"><a href="#/{{employee._id}}/reports" >{{employee.dirReports.length}}</a></p>
+            <button type="button" class="btn btn-default chevron" ng-click="viewDetail(employee)">
+                <span class="glyphicon glyphicon-menu-right"></span>
+            </button>
+        </li>
+    </ul>
 </div>
